<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.shopping_basket.MainActivity">
    <item
        android:id="@+id/action_send"
        android:icon="@drawable/plain_svgrepo_com"
        android:title="@string/action_send"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:id="@+id/action_qr"
        android:icon="@drawable/qr_code_svgrepo_com"
        android:title="Get QR code"
        app:showAsAction="ifRoom"
        android:visible="false" />

    <item
        android:id="@+id/action_toggle_notification"
        android:icon="@drawable/bell_svgrepo_com"
        android:title="@string/action_toggle_notification"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:id="@+id/action_admin"
        android:icon="@drawable/shield_keyhole_svgrepo_com"
        android:title="@string/toggle_admin"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:id="@+id/action_export_csv"
        android:icon="@drawable/upload"
        android:title="@string/export_csv"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/user_circle_svgrepo_com"
        android:title="@string/action_profile"
        app:showAsAction="always" />
</menu>