<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp"
    app:cardCornerRadius="24dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/oxford_blue">

        <ImageView
            android:id="@+id/event_card_poster"
            android:layout_width="match_parent"
            android:layout_height="187dp"
            android:contentDescription="Event Poster"
            app:srcCompat="@drawable/image_placeholder" />

        <TextView
            android:id="@+id/event_card_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto"
            android:paddingHorizontal="16dp"
            android:text="@string/event_name"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:lineHeight="36dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp">

            <TextView
                android:id="@+id/event_card_registration_period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:text="@string/event_date"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:lineHeight="24dp" />

            <TextView
                android:id="@+id/event_card_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:text="@string/event_time"
                android:textAlignment="viewEnd"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:lineHeight="24dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/event_card_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/roboto"
            android:paddingHorizontal="16dp"
            android:text="@string/event_status"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:lineHeight="24dp" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
