<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileFragment"
    android:layout_marginTop="?attr/actionBarSize"
    android:paddingHorizontal="24dp"
    android:orientation="vertical">

        <Button
            android:layout_marginStart="-24dp"
            android:id="@+id/button_cancel_edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/roboto"
            android:text="Back"
            android:textColor="@color/oxford_blue"
            android:textSize="20sp"
            app:icon="@drawable/reply_svgrepo_com"
            app:iconSize="24dp"
            app:iconTint="@color/oxford_blue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_text_profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:autofillHints="username"
                android:ems="10"
                android:fontFamily="@font/roboto_light"
                android:inputType="text"
                android:text="@string/user_name" />

            <EditText
                android:id="@+id/edit_text_profile_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:autofillHints="emailAddress"
                android:ems="10"
                android:fontFamily="@font/roboto_light"
                android:inputType="textEmailAddress"
                android:text="@string/user_email" />

            <EditText
                android:id="@+id/edit_text_profile_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:autofillHints="phone"
                android:ems="10"
                android:fontFamily="@font/roboto_light"
                android:inputType="phone"
                android:text="@string/user_phone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_marginBottom="8dp">

            <Button
                android:id="@+id/button_confirm_edit_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="Confirm"
                android:textSize="16sp" />
        </LinearLayout>

</LinearLayout>