<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:src="@drawable/image_placeholder" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="4dp">

            <TextView
                android:id="@+id/eventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="Event Name"
                android:textSize="32sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/eventDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/event_date"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/eventDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/event_time"
                    android:textAlignment="viewEnd"
                    android:textSize="16sp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/eventStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/event_status"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/registrationCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="y users have registered for this event"
                android:textSize="16sp"/>
        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/eventDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Event Detail"
                android:layout_marginBottom="4dp"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/eventGuideline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Criteria and Guidelines"
                android:layout_marginBottom="16dp"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp">

            <Button
                android:id="@+id/buttonBackToHome"
                android:layout_width="418dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/oxford_grey"
                android:fontFamily="@font/roboto_light"
                android:text="Back"
                android:textSize="16sp" />

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="418dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_light"
                android:text="Register"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>