<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/admin_event_detail"
    tools:context=".AdminEventDetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:fitsSystemWindows="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/admin_event_poster"
                android:layout_width="match_parent"
                android:layout_height="330dp"
                android:src="@drawable/image_placeholder" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="4dp">

                <TextView
                    android:id="@+id/admin_event_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="Event Name"
                    android:textSize="32sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:id="@+id/admin_event_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/event_date"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/detail_event_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/event_time"
                        android:textAlignment="viewEnd"
                        android:textSize="16sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/admin_event_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/event_status"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/admin_registration_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:text="y users have registered for this event"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="Event Description"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/admin_event_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/roboto"
                    android:text="No text provided"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="Criteria and Guidelines"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/admin_event_guideline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/roboto"
                    android:text="No text provided"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp">

                <Button
                    android:id="@+id/button_admin_event_to_home"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/oxford_grey"
                    android:fontFamily="@font/roboto_light"
                    android:text="Back"
                    android:textColor="@color/oxford_blue"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/button_admin_delete_event"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/error_bg"
                    android:fontFamily="@font/roboto_medium"
                    android:text="Delete"
                    android:textColor="@color/oxford_blue"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/detail_waitlist_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_light"
                android:text=""
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>